examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__print_as_parameter@def aprinterprint  c.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: None,
                    type_parameters: None,
                    parameters: Parameters {
                        children: [
                            DefaultParameter(
                                DefaultParameter {
                                    name: Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                    value: PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    [RANGE]
                                },
                            ),
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
